--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">AppForSeniors</string>
+
+    <!--TOOLBAR-->
+    <string name="back">BACK</string>
+    <string name="save">SAVE</string>
+
+    <!--Menu-->
+    <string name="menu">MENU</string>
+
 </resources>
