reading contact from phone implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="notes">NOTATKI</string>
     <string name="web">INTERNET</string>
 
+    <string name="write_number">Wpisz numer</string>
+    <string name="choose_from_contact">Ksiażka telefoniczna</string>
+    <string name="choose_number">Sposób wybory numeru</string>
 </resources>
