repair top bar, pass sms object betweent sms'es activitys

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">AppForSeniors</string>
 
     <!--TOOLBAR-->
-    <string name="back">BACK</string>
-    <string name="save">SAVE</string>
+    <string name="back">WRÓĆ</string>
+    <string name="save">ZAPISZ</string>
     <string name="newS">NOWA</string>
 
     <!--Menu-->
