--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <!--Sms-->
     <string name="show">POKAŻ</string>
     <string name="delete">USUŃ</string>
+    <string name="me">Ja</string>
 
 </resources>
