--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
 
     <!--Contacts-->
     <string name="write_number">Wpisz numer</string>
-    <string name="choose_from_contact">Ksiażka telefoniczna</string>
-    <string name="choose_number">Sposób wybory numeru</string>
+    <string name="choose_from_contact">Kontakty</string>
+    <string name="new_number">Nowy kontakt</string>
     <string name="add_contact">Dodaj nowy numer do listy</string>
     <!--Sms-->
     <string name="show">POKAŻ</string>
