sending sms, checking contact to sms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="save">ZAPISZ</string>
     <string name="newS">NOWA</string>
     <string name="write">NAPISZ</string>
-
+    <string name="send">WYŚLIJ</string>
     <string name="newL">NEW</string>
 
     <!--Menu-->
