--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="alarm">BUDZIK</string>
     <string name="sms">WIADOMOSCI</string>
     <string name="call">ZADZWOŃ</string>
-    <string name="gps">PROWADŹ</string>
+    <string name="gps">NAWIGACJA</string>
     <string name="notes">NOTATKI</string>
     <string name="web">INTERNET</string>
     <string name="usun">USUN</string>
