recycler navigation list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="newS">NOWA</string>
     <string name="write">NAPISZ</string>
 
-    <string name="newL">NEW</string>
+    <string name="newL">NOWY</string>
 
     <!--Menu-->
     <string name="menu">MENU</string>
