--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="alarm">BUDZIK</string>
     <string name="sms">Wiadomości</string>
     <string name="call">ZADZWOŃ</string>
-    <string name="gps">PROWADŹ</string>
+    <string name="gps">Nawigacja</string>
     <string name="notes">NOTATKI</string>
     <string name="web">INTERNET</string>
     <string name="usun">Usuń</string>
