GUI improvement - add notes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="edit">Edytuj</string>
     <string name="delete_contact">Usuń</string>
     <string name="call_to_contact_number">Zadzwoń</string>
+
     <!--Sms-->
     <string name="show">Pokaż</string>
     <string name="delete">Usuń</string>
@@ -44,7 +45,13 @@
     <!--Popup-->
     <string name="popup_title_yes_no">Uważaj</string>
     <string name="popup_title_information">Informacja</string>
-
     <string name="sms_persmission">Do poprawnego działania, aplikacja potrzebuje Twojego pozwolenia na czytanie i wysyłanie wiadomości./nNadaj dostęp klikając "Tak" w następnym oknie..</string>
+
+
+    <!--Voice-notes-->
+    <string name="start_recording">Rozpocznij nowe nagranie</string>
+    <string name="stop_recording">Zakończ nagranie</string>
+    <string name="stop_play">Zatrzymaj nagranie</string>
+    <string name="play">Odtwórz</string>
 
 </resources>
