--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="stop_recording">Zakończ nagranie</string>
     <string name="stop_play">Zatrzymaj nagranie</string>
     <string name="play">Odtwórz</string>
+    <string name="stop_play_2">Stop</string>
 
 </resources>
